# web-auth-sdk

./: .coverage  .gitignore  LICENSE  Makefile  README.md  django-tox.ini  fastapi-tox.ini  flask-tox.ini  pyproject.toml  tox.ini
.github/workflows/: makefile-ci.yml  makefile.yml  publish.yml
test/: _fake_web_bridge.py  conftest.py  test_unit.py
test/django/: db.sqlite3  manage.py  test_e2e.py
test/django/bridge/: urls.py  views.py
test/django/sites/: asgi.py  settings.py  urls.py  wsgi.py
test/fastapi/: __init__.py  test_e2e.py
test/flask/: test_e2e.py
usr/etc/: JWT.txt  permissions.json
web_auth/: __init__.py  config.py
web_auth/bridges/: fastapi.py  flask.py
web_auth/core/: authorization.py  bridge.py  context.py  enum.py  exception.py  model.py  storage.py
web_auth/django/: __init__.py  bridge.py  urls.py  views.py
web_auth/domain/: authorization.py  bridge.py  context.py  model.py  storage.py  web_bridge.py
web_auth/fastapi/: __init__.py  bridge.py
web_auth/flask/: __init__.py  bridge.py
web_auth/storage/: file.py
web_auth/web_bridge/: fastapi.py  flask.py
